@@ -3,6 +3,7 @@
 - Migrate launcher category icons from 4.4 panels (bug #5067).
 - Fix compilation with -Wl,--as-needed (bug #5103).
 - Don't crash when the quit action button is pressed (bug #5118).
+- Properly set the systray orientation property (bug #5149).
 
 
 4.6.0
